--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/jquery-ui.js" type="text/javascript"></script>
 <script src="js/jquery.mobile-1.4.5.min.js" type="text/javascript"></script>
+<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+
 
 <title>Aplicación Móvil</title>
 <script type="text/javascript">
@@ -20,18 +22,16 @@ $(document).ready(function inicio(){
   var nombre=$("#nombre").val();
   var dir=$("#direccion").val();
   var giro=$("#giro").val();
-  var foto=$("#foto").val();
-  var lat=$("#lat").val();
-  var log=$("#log").val();
-
+ 
+ 
     $.ajax({
     type:"POST",
     url:"gardarDatos.php",
-    data:"nombre="+nombre+"&direccion="+dir+"&giro="+giro+"&foto="+foto+"&lat="+lat+"&log="+log,
+    data:"nombre="+nombre+"&direccion="+dir+"&giro="+giro,
     success: registro3
     });
     
-    function registro(datos){
+    function registro3(datos){
     alert(datos);
     }
   });
@@ -183,18 +183,72 @@ $(document).ready(function(){
 </script>
 
 
+<script type="text/javascript">
+
+function localize() {
+if (navigator.geolocation) {
+navigator.geolocation.getCurrentPosition(mapa,error);
+} else {
+alert('Tu navegador no soporta geolocalizacion.');
+}
+}
+
+function mapa(pos) { /************************ Aqui están las variables que te interesan***********************************/
+var latitud = pos.coords.latitude;
+var longitud = pos.coords.longitude;
+var precision = pos.coords.accuracy;
+
+var contenedor = document.getElementById("map")
+document.getElementById("lti").innerHTML=latitud;
+document.getElementById("lgi").innerHTML=longitud;
+document.getElementById("psc").innerHTML=precision;
+var centro = new google.maps.LatLng(latitud,longitud);
+var propiedades = { zoom: 15, center: centro, mapTypeId: google.maps.MapTypeId.ROADMAP };
+var map = new google.maps.Map(contenedor, propiedades);
+var marcador = new google.maps.Marker({ position: centro, map: map, title: "Tu posicion actual" });
+}
+
+
+function error(errorCode) {
+if(errorCode.code == 1)
+alert("No has permitido buscar tu localizacion")
+else if (errorCode.code==2)
+alert("Posicion no disponible")
+else
+alert("Ha ocurrido un error")
+}
+
+</script>
+
+
+
+
+
+
 
 
 <style type="text/css">
 p{
 text-align:center;
 }
+
+#map { 
+  width: 100%; 
+  height: 300px; 
+  border: 1px solid #d0d0d0;
+   } 
+
+
 </style>
 </head>
 
 
 
-<body>
+<body onLoad="localize()">
+
+
+
+
 
 
 <!--++++++++++++++++++++++++++++++++++++++++++++-->
@@ -204,7 +258,7 @@ text-align:center;
   </div>
   <div data-role="content">
     <nav>
-      <ul data-role="listview">
+      <ul data-role="navbar">
 	<li><a href="#registrar" >Registrar</a></li>
 	<!--li><a href="#consulta" >Consultar todo</a></li-->
 	<!--li><a href="#consulta2" >Consultar uno</a></li-->
@@ -252,15 +306,16 @@ text-align:center;
     <input type="text" id="direccion">
     <label for="giro">Giro:</label>
     <input type="text" id="giro">
-    <label for="foto">Capturar Foto:</label>
-    <li><a href="#" id="regFoto" data-role="button">Tomar Foto</a></li>
-    <li><div id="Foto"></div></li>
-    <label>Ubicar coordenadas:</label>
-    <label for="lat">Latitud:</label>
-    <input type="text" id="lat">
-    <label for="log">Longitud:</label>
-    <input type="text" id="log">
-    <input type="button" id="coor" value="Obtener Coordenadas">
+    <br/><h1>Google Maps Geoposicionamiento</h1>
+
+<label>Latitud: <span id="lti"></span></label>
+<label>Longitud: <span id="lgi"></span></label>
+<label>Presicion: <span id="psc"></span></label>
+<!--p>Latitud: <span id="lti"></span></p-->
+<!--p>Longitud: <span id="lgi"></span></p-->
+<!--p>Presici&oacute;n: <span id="psc"></span></p-->
+<div id="map" ></div>
+
     <input type="button" id="guardar" value="Guardar">
   </div>
   <a data-role="button" data-rel="back" data-inline="true">Regresar</a>
